--- a/templates/madlib2.html
+++ b/templates/madlib2.html
@@ -8,5 +8,5 @@
         {% endfor %}
         {{ weather[-1] }}.
     {% endif %}
-    There was a {{ color }} {{ noun }} sitting in the Hackbright Lab. When {{ person }} went to pick it up, it burst into flames in a totally {{ adj }} way.</p>
+    There was a {{ color }} {{ noun }} standing in the Hackbright Lab. When {{ person }} went to pick it up, it burst into flames in a totally {{ adj }} way.</p>
 {% endblock %}
